--- a/index.html
+++ b/index.html
@@ -321,60 +321,60 @@ document.addEventListener('DOMContentLoaded', function() {
         'nokTotal': { row: 10, col: 'G' },
 
         // GODZINY - WIERSZ 1 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r1': { row: 9, col: 'C' },
-        'h7_r1': { row: 9, col: 'C' },
-        'h8_r1': { row: 9, col: 'C' },
-        'h9_r1': { row: 9, col: 'C' },
-        'h10_r1': { row: 9, col: 'C' },
-        'h11_r1': { row: 9, col: 'C' },
-        'h12_r1': { row: 9, col: 'C' },
-        'h13_r1': { row: 9, col: 'C' },
+        'h6_r1': { row: 19, col: 'E' },
+        'h7_r1': { row: 20, col: 'E' },
+        'h8_r1': { row: 21, col: 'E' },
+        'h9_r1': { row: 22, col: 'E' },
+        'h10_r1': { row: 23, col: 'E' },
+        'h11_r1': { row: 24, col: 'E' },
+        'h12_r1': { row: 25, col: 'E' },
+        'h13_r1': { row: 26, col: 'E' },
 
-        'h14_r1': { row: 9, col: 'P' },
-        'h15_r1': { row: 9, col: 'Q' },
-        'h16_r1': { row: 9, col: 'R' },
-        'h17_r1': { row: 9, col: 'S' },
-        'h18_r1': { row: 9, col: 'T' },
-        'h19_r1': { row: 9, col: 'U' },
-        'h20_r1': { row: 9, col: 'V' },
-        'h21_r1': { row: 9, col: 'W' },
+        'h14_r1': { row: 19, col: 'C' },
+        'h15_r1': { row: 20, col: 'C' },
+        'h16_r1': { row: 21, col: 'C' },
+        'h17_r1': { row: 22, col: 'C' },
+        'h18_r1': { row: 23, col: 'C' },
+        'h19_r1': { row: 24, col: 'C' },
+        'h20_r1': { row: 25, col: 'C' },
+        'h21_r1': { row: 26, col: 'C' },
 
-        'h22_r1': { row: 9, col: 'X' },
-        'h23_r1': { row: 9, col: 'Y' },
-        'h0_r1': { row: 9, col: 'Z' },
-        'h1_r1': { row: 9, col: 'AA' },
-        'h2_r1': { row: 9, col: 'AB' },
-        'h3_r1': { row: 9, col: 'AC' },
-        'h4_r1': { row: 9, col: 'AD' },
-        'h5_r1': { row: 9, col: 'AE' },
+        'h22_r1': { row: 9, col: 'E' },
+        'h23_r1': { row: 9, col: 'E' },
+        'h0_r1': { row: 9, col: 'E' },
+        'h1_r1': { row: 9, col: 'E' },
+        'h2_r1': { row: 9, col: 'E' },
+        'h3_r1': { row: 9, col: 'E' },
+        'h4_r1': { row: 9, col: 'E' },
+        'h5_r1': { row: 9, col: 'E' },
 
         // GODZINY - WIERSZ 2 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r2': { row: 10, col: 'H' },
-        'h7_r2': { row: 10, col: 'I' },
-        'h8_r2': { row: 10, col: 'J' },
-        'h9_r2': { row: 10, col: 'K' },
-        'h10_r2': { row: 10, col: 'L' },
-        'h11_r2': { row: 10, col: 'M' },
-        'h12_r2': { row: 10, col: 'N' },
-        'h13_r2': { row: 10, col: 'O' },
+        'h6_r2': { row: 10, col: 'C' },
+        'h7_r2': { row: 10, col: 'C' },
+        'h8_r2': { row: 10, col: 'C' },
+        'h9_r2': { row: 10, col: 'C' },
+        'h10_r2': { row: 10, col: 'C' },
+        'h11_r2': { row: 10, col: 'C' },
+        'h12_r2': { row: 10, col: 'C' },
+        'h13_r2': { row: 10, col: 'C' },
 
-        'h14_r2': { row: 10, col: 'P' },
-        'h15_r2': { row: 10, col: 'Q' },
-        'h16_r2': { row: 10, col: 'R' },
-        'h17_r2': { row: 10, col: 'S' },
-        'h18_r2': { row: 10, col: 'T' },
-        'h19_r2': { row: 10, col: 'U' },
-        'h20_r2': { row: 10, col: 'V' },
-        'h21_r2': { row: 10, col: 'W' },
+        'h14_r2': { row: 10, col: 'E' },
+        'h15_r2': { row: 10, col: 'E' },
+        'h16_r2': { row: 10, col: 'E' },
+        'h17_r2': { row: 10, col: 'E' },
+        'h18_r2': { row: 10, col: 'E' },
+        'h19_r2': { row: 10, col: 'E' },
+        'h20_r2': { row: 10, col: 'E' },
+        'h21_r2': { row: 10, col: 'E' },
 
-        'h22_r2': { row: 10, col: 'X' },
-        'h23_r2': { row: 10, col: 'Y' },
-        'h0_r2': { row: 10, col: 'Z' },
-        'h1_r2': { row: 10, col: 'AA' },
-        'h2_r2': { row: 10, col: 'AB' },
-        'h3_r2': { row: 10, col: 'AC' },
-        'h4_r2': { row: 10, col: 'AD' },
-        'h5_r2': { row: 10, col: 'AE' },
+        'h22_r2': { row: 10, col: 'C' },
+        'h23_r2': { row: 10, col: 'C' },
+        'h0_r2': { row: 10, col: 'C' },
+        'h1_r2': { row: 10, col: 'C' },
+        'h2_r2': { row: 10, col: 'C' },
+        'h3_r2': { row: 10, col: 'C' },
+        'h4_r2': { row: 10, col: 'C' },
+        'h5_r2': { row: 10, col: 'C' },
     };
 
     // Funkcja do czyszczenia wszystkich pól danych
