--- a/index.html
+++ b/index.html
@@ -318,63 +318,63 @@ document.addEventListener('DOMContentLoaded', function() {
         'nokShift1': { row: 10, col: 'D' },
         'nokShift2': { row: 10, col: 'E' },
         'nokShift3': { row: 10, col: 'F' },
-        'nokTotal': { row: 10, col: 'G' },
+        'nokTotal': { row: 10, col: 'C' },
 
         // GODZINY - WIERSZ 1 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r1': { row: 15, col: 'E' },
-        'h7_r1': { row: 16, col: 'E' },
-        'h8_r1': { row: 17, col: 'E' },
-        'h9_r1': { row: 18, col: 'E' },
-        'h10_r1': { row: 19, col: 'E' },
-        'h11_r1': { row: 20, col: 'E' },
-        'h12_r1': { row: 21, col: 'E' },
-        'h13_r1': { row: 22, col: 'E' },
+        'h6_r1': { row: 14, col: 'E' },
+        'h7_r1': { row: 15, col: 'E' },
+        'h8_r1': { row: 16, col: 'E' },
+        'h9_r1': { row: 17, col: 'E' },
+        'h10_r1': { row: 18, col: 'E' },
+        'h11_r1': { row: 19, col: 'E' },
+        'h12_r1': { row: 20, col: 'E' },
+        'h13_r1': { row: 21, col: 'E' },
 
-        'h14_r1': { row: 15, col: 'C' },
-        'h15_r1': { row: 20, col: 'C' },
-        'h16_r1': { row: 21, col: 'C' },
-        'h17_r1': { row: 22, col: 'C' },
-        'h18_r1': { row: 23, col: 'C' },
-        'h19_r1': { row: 24, col: 'C' },
-        'h20_r1': { row: 25, col: 'C' },
-        'h21_r1': { row: 26, col: 'C' },
+        'h14_r1': { row: 22, col: 'E' },
+        'h15_r1': { row: 23, col: 'E' },
+        'h16_r1': { row: 24, col: 'E' },
+        'h17_r1': { row: 25, col: 'E' },
+        'h18_r1': { row: 26, col: 'E' },
+        'h19_r1': { row: 27, col: 'E' },
+        'h20_r1': { row: 28, col: 'E' },
+        'h21_r1': { row: 29, col: 'E' },
 
-        'h22_r1': { row: 9, col: 'E' },
-        'h23_r1': { row: 9, col: 'E' },
-        'h0_r1': { row: 9, col: 'E' },
-        'h1_r1': { row: 9, col: 'E' },
-        'h2_r1': { row: 9, col: 'E' },
-        'h3_r1': { row: 9, col: 'E' },
-        'h4_r1': { row: 9, col: 'E' },
-        'h5_r1': { row: 9, col: 'E' },
+        'h22_r1': { row: 30, col: 'E' },
+        'h23_r1': { row: 31, col: 'E' },
+        'h0_r1': { row: 32, col: 'E' },
+        'h1_r1': { row: 33, col: 'E' },
+        'h2_r1': { row: 34, col: 'E' },
+        'h3_r1': { row: 35, col: 'E' },
+        'h4_r1': { row: 36, col: 'E' },
+        'h5_r1': { row: 37, col: 'E' },
 
         // GODZINY - WIERSZ 2 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r2': { row: 10, col: 'C' },
-        'h7_r2': { row: 10, col: 'C' },
-        'h8_r2': { row: 10, col: 'C' },
-        'h9_r2': { row: 10, col: 'C' },
-        'h10_r2': { row: 10, col: 'C' },
-        'h11_r2': { row: 10, col: 'C' },
-        'h12_r2': { row: 10, col: 'C' },
-        'h13_r2': { row: 10, col: 'C' },
+        'h6_r2': { row: 14, col: 'C' },
+        'h7_r2': { row: 15, col: 'C' },
+        'h8_r2': { row: 16, col: 'C' },
+        'h9_r2': { row: 17, col: 'C' },
+        'h10_r2': { row: 18, col: 'C' },
+        'h11_r2': { row: 19, col: 'C' },
+        'h12_r2': { row: 20, col: 'C' },
+        'h13_r2': { row: 121, col: 'C' },
 
-        'h14_r2': { row: 10, col: 'E' },
-        'h15_r2': { row: 10, col: 'E' },
-        'h16_r2': { row: 10, col: 'E' },
-        'h17_r2': { row: 10, col: 'E' },
-        'h18_r2': { row: 10, col: 'E' },
-        'h19_r2': { row: 10, col: 'E' },
-        'h20_r2': { row: 10, col: 'E' },
-        'h21_r2': { row: 10, col: 'E' },
+        'h14_r2': { row: 22, col: 'C' },
+        'h15_r2': { row: 23, col: 'C' },
+        'h16_r2': { row: 24, col: 'C' },
+        'h17_r2': { row: 25, col: 'C' },
+        'h18_r2': { row: 26, col: 'C' },
+        'h19_r2': { row: 27, col: 'C' },
+        'h20_r2': { row: 28, col: 'C' },
+        'h21_r2': { row: 29, col: 'C' },
 
-        'h22_r2': { row: 10, col: 'C' },
-        'h23_r2': { row: 10, col: 'C' },
-        'h0_r2': { row: 10, col: 'C' },
-        'h1_r2': { row: 10, col: 'C' },
-        'h2_r2': { row: 10, col: 'C' },
-        'h3_r2': { row: 10, col: 'C' },
-        'h4_r2': { row: 10, col: 'C' },
-        'h5_r2': { row: 10, col: 'C' },
+        'h22_r2': { row: 30, col: 'C' },
+        'h23_r2': { row: 31, col: 'C' },
+        'h0_r2': { row: 32, col: 'C' },
+        'h1_r2': { row: 33, col: 'C' },
+        'h2_r2': { row: 34, col: 'C' },
+        'h3_r2': { row: 35, col: 'C' },
+        'h4_r2': { row: 36, col: 'C' },
+        'h5_r2': { row: 37, col: 'C' },
     };
 
     // Funkcja do czyszczenia wszystkich pól danych
