--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
             font-weight: 500;
         }
 
+        /* DODANE: Warunkowe style dla OEE */
+        .oee-below-60 { background-color: #ff4d4d; color: white; } /* Czerwony */
+        .oee-60-70 { background-color: #ff9933; color: black; } /* Pomarańczowy */
+        .oee-70-80 { background-color: #ffff66; color: black; } /* Żółty */
+        .oee-above-80 { background-color: #66cc66; color: black; } /* Zielony */
+
+
         .time-block {
             margin-bottom: 20px;
         }
@@ -84,7 +91,9 @@
             padding: 10px;
             height: 30px;
             background-color: #fff;
-            font-size: 12px; /* Domyślny rozmiar dla komórek czasowych */
+            /* ZMIENIONE: Powiększona czcionka dla komórek czasowych */
+            font-size: 16px; 
+            font-weight: bold;
         }
         .time-header th {
             text-align: center;
@@ -97,7 +106,7 @@
             }
             .time-table th, .time-table td {
                 padding: 6px;
-                font-size: 10px;
+                font-size: 14px; /* Dopasowanie czcionki godzinowej dla mniejszych ekranów */
             }
             select {
                 max-width: 100%;
@@ -287,131 +296,106 @@ document.addEventListener('DOMContentLoaded', function() {
     // Funkcja do formatowania daty z numeru seryjnego Google Sheets
     function formatGoogleSheetDate(serial) {
         // Sprawdź, czy wartość jest numerem i nie jest zerem.
-        // Google Sheets często zwraca "0" dla pustych komórek z formatowaniem daty.
         if (!serial || isNaN(serial) || parseFloat(serial) === 0) {
             return ''; // Zwróć pusty string dla nieprawidłowych wartości lub zera
         }
-        // Data zerowa w Google Sheets to 30.12.1899
-        // Liczba milisekund od 1 stycznia 1970 do 30.12.1899
         const excelEpoch = new Date(Date.UTC(1899, 11, 30)).getTime();
-        // 86400000 milisekund w dobie
         const date = new Date(excelEpoch + (parseFloat(serial) * 86400000));
 
-        // Formatowanie do DD.MM.RRRR
         const day = String(date.getDate()).padStart(2, '0');
-        const month = String(date.getMonth() + 1).padStart(2, '0'); // Miesiące są 0-11
+        const month = String(date.getMonth() + 1).padStart(2, '0');
         const year = date.getFullYear();
 
         return `${day}.${month}.${year}`;
     }
 
-    // Funkcja do ustawiania tekstu w danej komórce HTML
-    function setFieldValue(elementId, value, isDate = false) {
+    // Funkcja do ustawiania tekstu i stylów w danej komórce HTML
+    function setFieldValue(elementId, value, options = {}) {
         const element = document.getElementById(elementId);
         if (element) {
             let displayValue = '';
+            let rawValue = value; // Zachowaj oryginalną wartość do porównań numerycznych
+
+            // Usuń wszystkie poprzednie klasy stylów związanych z kolorowaniem OEE
+            element.classList.remove('oee-below-60', 'oee-60-70', 'oee-70-80', 'oee-above-80');
+            // Zresetuj styl inline (np. background-color, color), jeśli były ustawione
+            element.style.backgroundColor = '';
+            element.style.color = '';
+
             // Sprawdź, czy wartość nie jest pusta ani nie jest stringiem "0"
             if (value !== '' && value !== null && value !== undefined && String(value).trim() !== '0') {
-                if (isDate) {
-                    displayValue = formatGoogleSheetDate(value);
+                if (options.isDate) {
+                    displayValue = formatGoogleSheetDate(rawValue);
+                } else if (options.isPercentage) {
+                    // Spróbuj przekonwertować na liczbę
+                    const numValue = parseFloat(rawValue);
+                    if (!isNaN(numValue)) {
+                        displayValue = `${(numValue * 100).toFixed(0)}%`; // Formatuj jako procent bez miejsc po przecinku
+                        
+                        // ZASTOSUJ WARUNKOWE FORMATOWANIE DLA PROCENTÓW
+                        if (numValue < 0.60) {
+                            element.classList.add('oee-below-60');
+                        } else if (numValue >= 0.60 && numValue < 0.70) {
+                            element.classList.add('oee-60-70');
+                        } else if (numValue >= 0.70 && numValue < 0.80) {
+                            element.classList.add('oee-70-80');
+                        } else { // >= 0.80
+                            element.classList.add('oee-above-80');
+                        }
+                    }
                 } else {
-                    displayValue = value;
+                    displayValue = rawValue;
                 }
             }
             element.textContent = displayValue;
         } else {
-            console.warn(`Element o ID "${elementId}" nie został znaleziony w HTML.`);
+            // console.warn(`Element o ID "${elementId}" nie został znaleziony w HTML.`); // Odkomentuj do debugowania
         }
     }
 
     // --- MAPOWANIE PÓL HTML DO KOMÓREK W ARKUSZU GOOGLE ---
-    // Kluczem jest ID elementu HTML, wartością jest obiekt { row: numer_wiersza_arkusza, col: "litera_kolumny_arkusza" }
-    // UWAGA: Numery wierszy i litery kolumn są takie same jak w arkuszu Google.
-    // Dostosuj te wartości do faktycznego rozmieszczenia danych w Twoim arkuszu Google (zakres A1:M50).
+    // Dodano 'isPercentage: true' dla pól OEE
     const cellMappings = {
-        // Główny wskaźnik / data
-        'mainDisplayField': { row: 1, col: 'C', isDate: true }, // C1 jako data
+        'mainDisplayField': { row: 1, col: 'C', isDate: true },
 
-        // OEE (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'oeeShift1': { row: 2, col: 'D' },
-        'oeeShift2': { row: 2, col: 'E' },
-        'oeeShift3': { row: 2, col: 'F' },
-        'oeeTotal': { row: 2, col: 'C' }, // Zakładam C2 dla total OEE
+        'oeeShift1': { row: 2, col: 'D', isPercentage: true },
+        'oeeShift2': { row: 2, col: 'E', isPercentage: true },
+        'oeeShift3': { row: 2, col: 'F', isPercentage: true },
+        'oeeTotal': { row: 2, col: 'C', isPercentage: true }, // Zakładam C2 dla total OEE
 
-        // OK (przykładowe mapowanie, dostosuj do swojego arkusza)
         'okShift1': { row: 9, col: 'D' },
         'okShift2': { row: 9, col: 'E' },
         'okShift3': { row: 9, col: 'F' },
-        'okTotal': { row: 9, col: 'C' }, // Zakładam C9 dla total OK
+        'okTotal': { row: 9, col: 'C' },
 
-        // NOK (przykładowe mapowanie, dostosuj do swojego arkusza)
         'nokShift1': { row: 10, col: 'D' },
         'nokShift2': { row: 10, col: 'E' },
         'nokShift3': { row: 10, col: 'F' },
-        'nokTotal': { row: 10, col: 'C' }, // Zakładam C10 dla total NOK
+        'nokTotal': { row: 10, col: 'C' },
 
-        // GODZINY - WIERSZ 1 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r1': { row: 14, col: 'E' },
-        'h7_r1': { row: 15, col: 'E' },
-        'h8_r1': { row: 16, col: 'E' },
-        'h9_r1': { row: 17, col: 'E' },
-        'h10_r1': { row: 18, col: 'E' },
-        'h11_r1': { row: 19, col: 'E' },
-        'h12_r1': { row: 20, col: 'E' },
-        'h13_r1': { row: 21, col: 'E' },
+        'h6_r1': { row: 14, col: 'E' }, 'h7_r1': { row: 15, col: 'E' }, 'h8_r1': { row: 16, col: 'E' }, 'h9_r1': { row: 17, col: 'E' },
+        'h10_r1': { row: 18, col: 'E' }, 'h11_r1': { row: 19, col: 'E' }, 'h12_r1': { row: 20, col: 'E' }, 'h13_r1': { row: 21, col: 'E' },
+        'h14_r1': { row: 22, col: 'E' }, 'h15_r1': { row: 23, col: 'E' }, 'h16_r1': { row: 24, col: 'E' }, 'h17_r1': { row: 25, col: 'E' },
+        'h18_r1': { row: 26, col: 'E' }, 'h19_r1': { row: 27, col: 'E' }, 'h20_r1': { row: 28, col: 'E' }, 'h21_r1': { row: 29, col: 'E' },
+        'h22_r1': { row: 30, col: 'E' }, 'h23_r1': { row: 31, col: 'E' }, 'h0_r1': { row: 32, col: 'E' }, 'h1_r1': { row: 33, col: 'E' },
+        'h2_r1': { row: 34, col: 'E' }, 'h3_r1': { row: 35, col: 'E' }, 'h4_r1': { row: 36, col: 'E' }, 'h5_r1': { row: 37, col: 'E' },
 
-        'h14_r1': { row: 22, col: 'E' },
-        'h15_r1': { row: 23, col: 'E' },
-        'h16_r1': { row: 24, col: 'E' },
-        'h17_r1': { row: 25, col: 'E' },
-        'h18_r1': { row: 26, col: 'E' },
-        'h19_r1': { row: 27, col: 'E' },
-        'h20_r1': { row: 28, col: 'E' },
-        'h21_r1': { row: 29, col: 'E' },
-
-        'h22_r1': { row: 30, col: 'E' },
-        'h23_r1': { row: 31, col: 'E' },
-        'h0_r1': { row: 32, col: 'E' },
-        'h1_r1': { row: 33, col: 'E' },
-        'h2_r1': { row: 34, col: 'E' },
-        'h3_r1': { row: 35, col: 'E' },
-        'h4_r1': { row: 36, col: 'E' },
-        'h5_r1': { row: 37, col: 'E' },
-
-        // GODZINY - WIERSZ 2 (przykładowe mapowanie, dostosuj do swojego arkusza)
-        'h6_r2': { row: 14, col: 'C' },
-        'h7_r2': { row: 15, col: 'C' },
-        'h8_r2': { row: 16, col: 'C' },
-        'h9_r2': { row: 17, col: 'C' },
-        'h10_r2': { row: 18, col: 'C' },
-        'h11_r2': { row: 19, col: 'C' },
-        'h12_r2': { row: 20, col: 'C' },
-        'h13_r2': { row: 21, col: 'C' },
-
-        'h14_r2': { row: 22, col: 'C' },
-        'h15_r2': { row: 23, col: 'C' },
-        'h16_r2': { row: 24, col: 'C' },
-        'h17_r2': { row: 25, col: 'C' },
-        'h18_r2': { row: 26, col: 'C' },
-        'h19_r2': { row: 27, col: 'C' },
-        'h20_r2': { row: 28, col: 'C' },
-        'h21_r2': { row: 29, col: 'C' },
-
-        'h22_r2': { row: 30, col: 'C' },
-        'h23_r2': { row: 31, col: 'C' },
-        'h0_r2': { row: 32, col: 'C' },
-        'h1_r2': { row: 33, col: 'C' },
-        'h2_r2': { row: 34, col: 'C' },
-        'h3_r2': { row: 35, col: 'C' },
-        'h4_r2': { row: 36, col: 'C' },
-        'h5_r2': { row: 37, col: 'C' },
+        'h6_r2': { row: 14, col: 'C' }, 'h7_r2': { row: 15, col: 'C' }, 'h8_r2': { row: 16, col: 'C' }, 'h9_r2': { row: 17, col: 'C' },
+        'h10_r2': { row: 18, col: 'C' }, 'h11_r2': { row: 19, col: 'C' }, 'h12_r2': { row: 20, col: 'C' }, 'h13_r2': { row: 21, col: 'C' },
+        'h14_r2': { row: 22, col: 'C' }, 'h15_r2': { row: 23, col: 'C' }, 'h16_r2': { row: 24, col: 'C' }, 'h17_r2': { row: 25, col: 'C' },
+        'h18_r2': { row: 26, col: 'C' }, 'h19_r2': { row: 27, col: 'C' }, 'h20_r2': { row: 28, col: 'C' }, 'h21_r2': { row: 29, col: 'C' },
+        'h22_r2': { row: 30, col: 'C' }, 'h23_r2': { row: 31, col: 'C' }, 'h0_r2': { row: 32, col: 'C' }, 'h1_r2': { row: 33, col: 'C' },
+        'h2_r2': { row: 34, col: 'C' }, 'h3_r2': { row: 35, col: 'C' }, 'h4_r2': { row: 36, col: 'C' }, 'h5_r2': { row: 37, col: 'C' },
     };
 
-    // Funkcja do czyszczenia wszystkich pól danych
+    // Funkcja do czyszczenia wszystkich pól danych (w tym stylów)
     function clearAllDataFields() {
         const dataFields = document.querySelectorAll('.data-field');
         dataFields.forEach(field => {
             field.textContent = '';
+            field.classList.remove('oee-below-60', 'oee-60-70', 'oee-70-80', 'oee-above-80');
+            field.style.backgroundColor = ''; // Resetuj tło
+            field.style.color = ''; // Resetuj kolor tekstu
         });
         const timeCells = document.querySelectorAll('.time-table td');
         timeCells.forEach(cell => {
@@ -448,10 +432,9 @@ document.addEventListener('DOMContentLoaded', function() {
                 const colIndexInData = getGoogleSheetColumnIndex(map.col);
 
                 if (data[rowIndexInData] && data[rowIndexInData][colIndexInData] !== undefined) {
-                    setFieldValue(htmlId, data[rowIndexInData][colIndexInData], map.isDate);
+                    setFieldValue(htmlId, data[rowIndexInData][colIndexInData], map);
                 } else {
-                    setFieldValue(htmlId, ''); // Ustaw puste, jeśli brak danych
-                    // console.warn(`Brak danych dla ID "${htmlId}" w arkuszu (komórka ${map.col}${map.row}).`); // Możesz odkomentować dla debugowania
+                    setFieldValue(htmlId, '', map); // Ustaw puste, jeśli brak danych
                 }
             }
 
