--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <table>
             <tr>
-                <td id="mainDisplayField"><strong>Wybierz linię</strong></td>
+                <td id="mainDisplayField"><strong>Wyb</strong></td>
                 <td colspan="4">
                     <select id="sheetSelector">
                         <option value="">Wybierz linię</option>
