--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard OEE - Poprawiony i Uproszczony</title>
+    <title>D</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -120,7 +120,7 @@
                 <td id="mainDisplayField"><strong>Wyb</strong></td>
                 <td colspan="4">
                     <select id="sheetSelector">
-                        <option value="">Wybierz linię</option>
+                        <option value="">Wybie linię</option>
                         <option>NHL</option>
                         <option>MP4</option>
                         <option>Hood Latch</option>
