--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="____a__Dawid - spokojnie, ogarniemy:) ;) ">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="____c__Dawid - spokojnie, ogarniemy:) ;) ">
 
         <table>
             <tr>
                 <td id="mainDisplayField"><strong>Wyb</strong></td>
                 <td colspan="4">
                     <select id="sheetSelector">
-                        <option value="">Wybie linię</option>
+                        <option value="">Wybierz linię</option>
                         <option>NHL</option>
                         <option>MP4</option>
                         <option>Hood Latch</option>
