--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="_______Dawid - spokojnie, ogarniemy:) ;) ">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="____s___Dawid - spokojnie, ogarniemy:) ;) ">
 
         <table>
             <tr>
@@ -328,17 +328,17 @@ document.addEventListener('DOMContentLoaded', function() {
         'oeeShift2': { row: 2, col: 'E' }, // E2 w arkuszu
         'oeeShift3': { row: 2, col: 'F' }, // F2 w arkuszu
         'oeeTotal': { row: 2, col: 'C' }, // C2 w arkuszu
-        'okShift1': { row: 3, col: 'D' }, // D3 w arkuszu
-        'okShift2': { row: 3, col: 'E' }, // E3 w arkuszu
-        'okShift3': { row: 3, col: 'F' }, // F3 w arkuszu
-        'okTotal': { row: 3, col: 'C' }, // C3 w arkuszu
-        'nokShift1': { row: 4, col: 'D' }, // D4 w arkuszu
-        'nokShift2': { row: 4, col: 'E' }, // E4 w arkuszu
-        'nokShift3': { row: 4, col: 'F' }, // F4 w arkuszu
-        'nokTotal': { row: 4, col: 'C' }, // C4 w arkuszu
+        'okShift1': { row: 9, col: 'D' }, // D3 w arkuszu
+        'okShift2': { row: 9, col: 'E' }, // E3 w arkuszu
+        'okShift3': { row: 9, col: 'F' }, // F3 w arkuszu
+        'okTotal': { row: 9, col: 'C' }, // C3 w arkuszu
+        'nokShift1': { row: 10, col: 'D' }, // D4 w arkuszu
+        'nokShift2': { row: 10, col: 'E' }, // E4 w arkuszu
+        'nokShift3': { row: 10, col: 'F' }, // F4 w arkuszu
+        'nokTotal': { row: 10, col: 'C' }, // C4 w arkuszu
 
         // GODZINY - WIERSZ 1
-        'h6_r1': { row: 7, col: 'E' }, // E7 w arkuszu
+        'h6_r1': { row: 21, col: 'E' }, // E7 w arkuszu
         'h7_r1': { row: 8, col: 'E' }, // E8 w arkuszu
         'h8_r1': { row: 9, col: 'E' }, // E9 w arkuszu
         'h9_r1': { row: 10, col: 'E' }, // E10 w arkuszu
