--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="____s___Dawid - spokojnie, ogarniemy:) ;) ">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="____w___Dawid - spokojnie, ogarniemy:) ;) ">
 
         <table>
             <tr>
@@ -338,7 +338,7 @@ document.addEventListener('DOMContentLoaded', function() {
         'nokTotal': { row: 10, col: 'C' }, // C4 w arkuszu
 
         // GODZINY - WIERSZ 1
-        'h6_r1': { row: 21, col: 'E' }, // E7 w arkuszu
+        'h6_r1': { row: 19, col: 'E' }, // E7 w arkuszu
         'h7_r1': { row: 8, col: 'E' }, // E8 w arkuszu
         'h8_r1': { row: 9, col: 'E' }, // E9 w arkuszu
         'h9_r1': { row: 10, col: 'E' }, // E10 w arkuszu
