--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ document.addEventListener('DOMContentLoaded', function() {
     }
 
     const cellMappings = {
-        'mainDisplayField: { row: 1 - rowOffset, col: 'C' } // jeśli offset jest globalny
+        'mainDisplayField': { row: 1, col: 'C', isDate: true },
         'oeeShift1': { row: 2, col: 'D' },
         'oeeShift2': { row: 2, col: 'E' },
         'oeeShift3': { row: 2, col: 'F' },
