--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@ document.addEventListener('DOMContentLoaded', function() {
         'oeeShift3': { row: 3, col: 'F' },
         
         // OK (wiersz 4)
-        'okTotal': { row: 4, col: 'C' },
+        
+        'okTotal': { row: 6, col: 'C' } 
         'okShift1': { row: 4, col: 'D' },
         'okShift2': { row: 4, col: 'E' },
         'okShift3': { row: 4, col: 'F' },
