--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="sdsbędize zajebiste logo ... Piasecki jest the best ;) ">
+        <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="wdize zajebiste logo ... Piasecki jest the best ;) ">
 
         <table>
             <tr>
@@ -330,7 +330,7 @@ document.addEventListener('DOMContentLoaded', function() {
     // Dostosuj te wartości do faktycznego rozmieszczenia danych w Twoim arkuszu Google (zakres A1:M50).
     const cellMappings = {
         // Główny wskaźnik / data
-        'mainDisplayField': { row: 43, col: 'E'} //, isDate: true },
+        'mainDisplayField': { row: 43, col: 'E', isDate: true },
 
         // OEE (przykładowe mapowanie, dostosuj do swojego arkusza)
         'oeeShift1': { row: 2, col: 'D' },
