--- a/index.html
+++ b/index.html
@@ -43,13 +43,32 @@
             color: red;
             font-weight: bold;
         }
+        .input-group {
+            display: flex; /* Use flexbox for side-by-side elements */
+            align-items: center; /* Align items vertically in the middle */
+            gap: 10px; /* Space between the select and the button */
+            width: 100%; /* Ensure the group takes full width */
+        }
         select {
             font-size: 14px;
             padding: 4px;
             border-radius: 4px;
             border: 1px solid #ccc;
-            width: 100%;
-            max-width: 200px;
+            flex-grow: 1; /* Allow select to grow and take available space */
+            max-width: 200px; /* Keep a max-width for the select */
+        }
+        button {
+            padding: 5px 15px;
+            font-size: 14px;
+            border-radius: 4px;
+            border: 1px solid #007bff;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #0056b3;
         }
 
         /* Styl dla głównego pola daty/wskaźnika */
@@ -108,6 +127,14 @@
             .data-field {
                 font-size: 12px;
             }
+            .input-group {
+                flex-direction: column; /* Stack vertically on small screens */
+                align-items: stretch; /* Stretch items to full width */
+            }
+            select, button {
+                width: 100%; /* Full width for select and button on small screens */
+                max-width: none; /* Remove max-width constraint */
+            }
         }
     </style>
 </head>
@@ -119,20 +146,23 @@
             <tr>
                 <td id="mainDisplayField"><strong>Wybierz linię</strong></td>
                 <td colspan="4">
-                    <select id="sheetSelector">
-                        <option value="">Wybierz linię</option>
-                        <option>NHL</option>
-                        <option>MP4</option>
-                        <option>Hood Latch</option>
-                        <option>M4</option>
-                        <option>H-Latch GŁÓWNA</option>
-                        <option>H-Latch PIANA</option>
-                        <option>139 P</option>
-                        <option>139 T</option>
-                        <option>SV3 A9</option>
-                        <option>Pokrywki</option>
-                        <option>Cardrige</option>
-                    </select>
+                    <div class="input-group">
+                        <select id="sheetSelector">
+                            <option value="">Wybierz linię</option>
+                            <option>NHL</option>
+                            <option>MP4</option>
+                            <option>Hood Latch</option>
+                            <option>M4</option>
+                            <option>H-Latch GŁÓWNA</option>
+                            <option>H-Latch PIANA</option>
+                            <option>139 P</option>
+                            <option>139 T</option>
+                            <option>SV3 A9</option>
+                            <option>Pokrywki</option>
+                            <option>Cardrige</option>
+                        </select>
+                        <button id="refreshButton">ODŚWIEŻ</button>
+                    </div>
                 </td>
             </tr>
             <tr>
@@ -257,6 +287,7 @@
 document.addEventListener('DOMContentLoaded', function() {
     const sheetId = '1gcWHcIZv7OMuU1bNNQ5P7XFLNpLoBsabXbG9hJImGpc'; // <-- ID Twojego Arkusza Google
     const sheetSelector = document.getElementById('sheetSelector');
+    const refreshButton = document.getElementById('refreshButton'); // New: Get the refresh button
     const mainDisplayField = document.getElementById('mainDisplayField');
 
     // Funkcja do konwersji litery kolumny na indeks liczbowy (0-indexed)
@@ -462,8 +493,10 @@ document.addEventListener('DOMContentLoaded', function() {
         }
     }
 
-    // Nasłuchuj zmian w rozwijanej liście i odświeżaj dashboard
+    // Nasłuchuj zmian w rozwijanej liście
     sheetSelector.addEventListener('change', updateDashboard);
+    // Nasłuchuj kliknięcia przycisku odświeżania
+    refreshButton.addEventListener('click', updateDashboard);
 
     // Wywołaj funkcję raz po załadowaniu strony, aby ustawić początkowy stan
     if (sheetSelector.value) {
